[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Doors/DoorWall.png" type="Texture" id=1]
[ext_resource path="res://Src/DoorWall.gd" type="Script" id=2]
[ext_resource path="res://Src/Minigames/LockpickSmallMinigame/LockpickSmallMinigameSpawner.gd" type="Script" id=3]
[ext_resource path="res://Src/Minigames/LightMinigame/LightMinigameSpawner.gd" type="Script" id=4]
[ext_resource path="res://Src/Minigames/SimonSays/SimonSaysSpawner.gd" type="Script" id=5]
[ext_resource path="res://Assets/Doors/KeySign.png" type="Texture" id=6]
[ext_resource path="res://Assets/SFX/door_wood_close.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/door_wood_open.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/door_metal_open2.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/door_metal_close2.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/insert_key.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/chest_locked.wav" type="AudioStream" id=12]

[sub_resource type="Animation" id=1]
resource_name = "open_door"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 16 )

[node name="DoorWall" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open_door = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=[
"DoorWall",
]]
collision_layer = 4097
collision_mask = 4097

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 4, -16 )
shape = SubResource( 2 )

[node name="DoorArea" type="Area2D" parent="." groups=[
"Door",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2( 4, -16 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4, -16 )
texture = ExtResource( 1 )
hframes = 3

[node name="LockpickSmallMinigameSpawner" type="Area2D" parent="."]
visible = false
script = ExtResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LockpickSmallMinigameSpawner"]
position = Vector2( 4, -16 )
shape = SubResource( 3 )

[node name="LightMinigameSpawner" type="Area2D" parent="."]
visible = false
script = ExtResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LightMinigameSpawner"]
position = Vector2( 4, -16 )
shape = SubResource( 3 )

[node name="SimonSays" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="KeySign" type="Sprite" parent="."]
visible = false
position = Vector2( 4, -36 )
texture = ExtResource( 6 )
hframes = 3

[node name="DoorSounds" type="Node2D" parent="."]

[node name="WoodenOpen" type="AudioStreamPlayer2D" parent="DoorSounds"]
stream = ExtResource( 8 )
attenuation = 2.0
bus = "Sound"

[node name="WoodenClose" type="AudioStreamPlayer2D" parent="DoorSounds"]
stream = ExtResource( 7 )
attenuation = 2.0
bus = "Sound"

[node name="MetalOpen" type="AudioStreamPlayer2D" parent="DoorSounds"]
stream = ExtResource( 9 )
attenuation = 2.0
bus = "Sound"

[node name="MetalClose" type="AudioStreamPlayer2D" parent="DoorSounds"]
stream = ExtResource( 10 )
attenuation = 2.0
bus = "Sound"

[node name="KeyUse" type="AudioStreamPlayer2D" parent="DoorSounds"]
stream = ExtResource( 11 )
attenuation = 2.0
bus = "Sound"

[node name="Locked" type="AudioStreamPlayer2D" parent="DoorSounds"]
stream = ExtResource( 12 )
attenuation = 2.0
bus = "Sound"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="DoorArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DoorArea" to="." method="_on_Area2D_body_exited"]
